# bbb-voting

./: docker-compose.yml
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
client/src/components/HorizontalBarGraphCard/: index.tsx
client/src/components/OverviewGraphCard/: index.tsx
client/src/components/PieGraphCard/: index.tsx
server/: .gitignore  Cargo.toml  eslint.config.mjs  package.json  pnpm-lock.yaml
server-rust/: Cargo.toml
server-rust/src/: handlers.rs  main.rs
server/src/: app.module.ts  handlers.rs  main.rs  main.ts  worker.rs
server/src/redis/: redis.service.ts
server/src/votes/: votes.controller.ts  votes.gateway.ts  votes.module.ts  votes.processor.ts  votes.service.ts
server/tests/: load-test.yaml
src/votes/: votes.controller.ts  votes.module.ts  votes.service.ts
test/: package.json  pnpm-lock.yaml  script.js
