[package]
name = "server-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
hyper = "1.6.0"
redis = { version = "0.29.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
opt-level = 3     
lto = "fat"    
codegen-units = 1 
strip = "symbols" 
panic = 'abort'
